init: [stabled] [work] [tested] Added new branch for aws services LAMBDA FUNCTION Using Java 8